force-app/main/default/objects/order_info__c/order_info__c.object-meta.xml
<CustomObject>
    <description>タン　オークション出品データ（Auction_Data__c）に最終出庫日（stock_ship_date__c）がNULLの陸送情報｜分割工程ごとに連携される

1日2回　8:55・14:55時点のデータ。
基本9時、15時には最新のデータが反映
出品データ側の最終出庫から半年経ったら削除</description>
    <label>陸送情報</label>
    <nameField>
        <label>陸送情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>