force-app/main/default/objects/order_info__c/fields/Auction_Data__c.field-meta.xml
<CustomField>
    <fullName>Auction_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するオークションデータ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>陸送情報</relationshipLabel>
    <relationshipName>Auction_Data_order_info</relationshipName>
    <type>Lookup</type>
</CustomField>