force-app/main/default/objects/order_info__c/fields/car_number__c.field-meta.xml
<CustomField>
    <fullName>car_number__c</fullName>
    <label>車台番号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>