force-app/main/default/objects/order_info__c/fields/customer_code__c.field-meta.xml
<CustomField>
    <fullName>customer_code__c</fullName>
    <label>依頼元得意先コード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>