force-app/main/default/objects/order_info__c/fields/customer_name__c.field-meta.xml
<CustomField>
    <fullName>customer_name__c</fullName>
    <label>依頼元得意先名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>