force-app/main/default/objects/order_info__c/fields/delivery_note__c.field-meta.xml
<CustomField>
    <fullName>delivery_note__c</fullName>
    <label>配送注記</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>