force-app/main/default/objects/order_info__c/fields/delivery_status__c.field-meta.xml
<CustomField>
    <fullName>delivery_status__c</fullName>
    <label>回送状況</label>
    <length>100</length>
    <type>Text</type>
</CustomField>