force-app/main/default/objects/order_info__c/fields/departure_name__c.field-meta.xml
<CustomField>
    <fullName>departure_name__c</fullName>
    <label>発地名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>