force-app/main/default/objects/order_info__c/fields/destination_name__c.field-meta.xml
<CustomField>
    <fullName>destination_name__c</fullName>
    <label>着地名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>