force-app/main/default/objects/order_info__c/fields/foreign_key__c.field-meta.xml
<CustomField>
    <fullName>foreign_key__c</fullName>
    <externalId>true</externalId>
    <label>foreign_key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>