force-app/main/default/objects/order_info__c/fields/item_name__c.field-meta.xml
<CustomField>
    <fullName>item_name__c</fullName>
    <label>品名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>