force-app/main/default/objects/order_info__c/fields/kanri_num__c.field-meta.xml
<CustomField>
    <fullName>kanri_num__c</fullName>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>