force-app/main/default/objects/order_info__c/fields/lot_number__c.field-meta.xml
<CustomField>
    <fullName>lot_number__c</fullName>
    <label>ロット番号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>