force-app/main/default/objects/order_info__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却先販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>陸送情報</relationshipLabel>
    <relationshipName>Member_order_info</relationshipName>
    <type>Lookup</type>
</CustomField>