force-app/main/default/objects/order_info__c/fields/order_invoice_remarks__c.field-meta.xml
<CustomField>
    <fullName>order_invoice_remarks__c</fullName>
    <label>受注伝票摘要</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>