force-app/main/default/objects/order_info__c/fields/pickup_note__c.field-meta.xml
<CustomField>
    <fullName>pickup_note__c</fullName>
    <label>集荷注記</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>