force-app/main/default/objects/order_info__c/fields/process_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>process_delivery_date__c</fullName>
    <label>工程配達日</label>
    <type>Date</type>
</CustomField>