force-app/main/default/objects/order_info__c/fields/process_delivery_status__c.field-meta.xml
<CustomField>
    <fullName>process_delivery_status__c</fullName>
    <label>工程回送状況</label>
    <length>100</length>
    <type>Text</type>
</CustomField>