force-app/main/default/objects/order_info__c/fields/process_destination_name__c.field-meta.xml
<CustomField>
    <fullName>process_destination_name__c</fullName>
    <label>工程着地名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>