force-app/main/default/objects/order_info__c/fields/process_number__c.field-meta.xml
<CustomField>
    <fullName>process_number__c</fullName>
    <label>工程番号</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>