force-app/main/default/objects/order_info__c/fields/process_pickup_date__c.field-meta.xml
<CustomField>
    <fullName>process_pickup_date__c</fullName>
    <label>工程集荷日</label>
    <type>Date</type>
</CustomField>