force-app/main/default/objects/order_info__c/fields/relation_oneprice__c.field-meta.xml
<CustomField>
    <fullName>relation_oneprice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するワンプライス車両　申込管理</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipLabel>陸送情報</relationshipLabel>
    <relationshipName>relation_oneprice</relationshipName>
    <type>Lookup</type>
</CustomField>