force-app/main/default/objects/order_info__c/fields/sa_car_info_id__c.field-meta.xml
<CustomField>
    <fullName>sa_car_info_id__c</fullName>
    <description>タン</description>
    <label>sa_car_info_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>