force-app/main/default/objects/order_info__c/fields/subcontractor_name__c.field-meta.xml
<CustomField>
    <fullName>subcontractor_name__c</fullName>
    <label>傭車名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>