force-app/main/default/objects/order_info__c/fields/u_cname__c.field-meta.xml
<CustomField>
    <fullName>u_cname__c</fullName>
    <label>売却先</label>
    <length>100</length>
    <type>Text</type>
</CustomField>