force-app/main/default/objects/order_info__c/fields/u_member_id__c.field-meta.xml
<CustomField>
    <fullName>u_member_id__c</fullName>
    <label>顧客コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>