force-app/main/default/objects/order_info__c/fields/vehicle_type_name__c.field-meta.xml
<CustomField>
    <fullName>vehicle_type_name__c</fullName>
    <label>車種名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>