force-app/main/default/objects/order_info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>process_number__c</columns>
    <columns>process_delivery_status__c</columns>
    <columns>process_departure_name__c</columns>
    <columns>process_destination_name__c</columns>
    <columns>process_pickup_date__c</columns>
    <columns>process_delivery_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>